[gd_scene load_steps=3 format=3 uid="uid://c0flmbctes8js"]

[ext_resource type="Script" path="res://shared/targeting/targeting_system.gd" id="1_hv3ua"]
[ext_resource type="PackedScene" uid="uid://c75ul6ulpjtar" path="res://shared/targeting/hit_area.tscn" id="2_lvxe1"]

[node name="TargetingSystem" type="Node2D"]
script = ExtResource("1_hv3ua")

[node name="HitArea" parent="." instance=ExtResource("2_lvxe1")]

[connection signal="aquired_new_target" from="." to="HitArea" method="_on_targeting_area_aquired_new_target"]
[connection signal="updated_target_in_range" from="HitArea" to="." method="_on_hit_area_updated_target_in_range"]
